--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
         <!-- Nav Left Side -->
           <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
-              <a class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase text-white" href="https://www.linkedin.com/in/dong-xia-tennis-4040/">
+              <a class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase text-white" href="another.html">
                 <!-- Nav Title -->
                 Dong Xia
               </a>
